Salesforce Billing Service System/force-app/main/default/objects/Maintenance_Schedule__c/Maintenance_Schedule__c.object-meta.xml
<CustomObject>
    <label>Maintenance Schedule</label>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Maintenance Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>