Salesforce Billing Service System/force-app/main/default/objects/Maintenance_Schedule__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Maintenance Schedule</relationshipLabel>
    <relationshipName>Maintenance_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>