Salesforce Billing Service System/force-app/main/default/objects/Maintenance_Schedule__c/fields/Last_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Last_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the most recently completed job</description>
    <inlineHelpText>Link to the most recently completed job</inlineHelpText>
    <label>Last Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Maintenance Schedule</relationshipLabel>
    <relationshipName>Maintenance_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>