Salesforce Billing Service System/force-app/main/default/objects/Maintenance_Schedule__c/fields/Next_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Service_Date__c</fullName>
    <description>Trigger for the automated Work Order</description>
    <inlineHelpText>Trigger for the automated Work Order</inlineHelpText>
    <label>Next Service Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>