Salesforce Billing Service System/force-app/main/default/objects/Maintenance_Schedule__c/fields/Service_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Service_Frequency__c</fullName>
    <description>Number of months between visits</description>
    <inlineHelpText>Number of months between visits</inlineHelpText>
    <label>Service Frequency</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>